Bug #797 If query ignored on slave (replicate-ignore-table) the slave still checks error
Submitted: 6 Jul 2003 9:33 Modified: 8 Jul 2003 6:54
Reporter: Guilhem Bichot Email Updates:
Status: Closed
Category:Server: Replication Severity:S3 (Non-critical)
Version:4.0 OS:Any (all)
Assigned to: Guilhem Bichot Target Version:

[6 Jul 2003 9:33] Guilhem Bichot
Description:
(How short is the length limit for "Synopsis").
If a query got a non zero error code on the master:
the slave parses the query, detects that the table should be ignored,
so returns error code 0. Then if the error code on the master was non zero
(example: 1062 duplicate key) the slave will stop and say the error codes don't
match.
'Ignore table' should imply 'ignore error code'.
No bug for replicate-*-db rules.

How to repeat:
Master:
create table test.t(a int primary key);
insert into test.t values (1),(1);
Slave: start it with --replicate-ignore-table=test.t,
start slave;
check the problem in show slave status.

Suggested fix:
will fix it before 4.0.14 is out hopefully.
[8 Jul 2003 6:54] Guilhem Bichot
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at 
    http://www.mysql.com/doc/en/Installing_source_tree.html

fixed in 4.0 in ChangeSet@1.1502.1.1